# analysis

./: .gitignore  .gitmodules  CMakeLists.txt
analysis/: main.cpp
analysis.xcodeproj/: project.pbxproj
analysis.xcodeproj/xcshareddata/xcschemes/: analysis.xcscheme  testing.xcscheme
lib/: Makefile  analyse.cpp  analyse.h  angle_list.cpp  angle_list.h  constants.h  distribution.cpp  distribution.h  dyn_queue.cpp  dyn_queue.h  frame.cpp  frame.h  functions.cpp  functions.h  input.cpp  input.h  main.back  main.cpp  main.test  modular.cpp  modular.h  mol_functions.cpp  mol_functions.h  molecule.cpp  molecule.h  movie.cpp  movie.h  my_mean.cpp  my_mean.h  neighbours.cpp  neighbours.h  old.crys  order.csv  output.cpp  output.h  parallel.cpp  parallel.h  particle.cpp  particle.h  unit_cell.cpp  (+3 more)
pylib/: createCells.py  density.py  files.py  makeplot.py  molecule.py  testInput.py  unitCell.py
radial/: main.cpp
random/: main.cpp  swap.cpp  swap.h
src/: Compute.cpp  Compute.h  Frame.cpp  Frame.h  Molecule.cpp  Molecule.h  Neighbour_List.cpp  Neighbour_List.h  Particle.cpp  Particle.h  Search.cpp  Search.h  Vector.cpp  Vector.h  Vector2d.cpp  Vector2d.h  angle_list.cpp  distribution.cpp  distribution.h  dyn_queue.cpp  dyn_queue.h  frame.cpp  frame.h  functions.cpp  functions.h  input.cpp  input.h  main.cpp  modular.cpp  modular.h  mol_functions.cpp  mol_functions.h  molecule.cpp  molecule.h  movie.cpp  movie.h  my_mean.cpp  my_mean.h  neighbours.cpp  neighbours.h  (+8 more)
template/: main.cpp  my_list.cpp  my_list.h
test/: main.cpp  runTests.cpp  testCompute.h  testFrame.h  testFunctions.h  testInput.h  testMolecule.h  testNeighbours.h  testParticle.h  testSearch.h  testVector.h  testVector2d.h  testVector3d.h
work/: Makefile  diffusion.csv  front.lammpstrj  msd.csv  out.lammpstrj  rotation.csv  run_test.sh  short.lammpstrj  short_order.csv  short_order_dist.csv  test.py  unit_cell.plot
work/trj/: movie.lammpstrj
work/trj_contact/: 0000000000-angles.csv
